Add fonts + images + top nav titles + logo
Added:
-fonts to CSS
-images to folder
-top navigation page titles
-logo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Made In Her Image</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Spartan:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <div class="block_element">
+            <img src="images/MIHI_Logo_Secondary_White 2.png"
+            <div>MADE IN HER IMAGE</div>
+            <div>About</div>
+            <div>Explore</div>
+            <div>Program</div>
+            <div>Events</div>
+            <div>Sign Up</div>
+            <div>Log In</div>
+        </div>
+    </nav>
 </body>
 </html>
