--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <nav>
         <div class="block_element">
-            <img src="images/MIHI_Logo_Secondary_White 2.png"
-            <div>MADE IN HER IMAGE</div>
-            <div>About</div>
-            <div>Explore</div>
-            <div>Program</div>
-            <div>Events</div>
-            <div>Sign Up</div>
-            <div>Log In</div>
+            <img src="images/MIHI_Logo_Secondary_White 2.png">
+            <div class="inline-block">MADE IN HER IMAGE</div>
+            <div class="inline-block">About</div>
+            <div class="inline-block">Explore</div>
+            <div class="inline-block">Program</div>
+            <div class="inline-block">Events</div>
+            <div class="inline-block">Sign Up</div>
+            <div class="inline-block">Log In</div>
         </div>
     </nav>
 </body>
