--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Made In Her Image</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Spartan:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Bebas+Neue&family=Spartan:wght@400;500;700;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <nav>
-        <div class="block_element">
-            <img src="images/MIHI_Logo_Secondary_White 2.png">
-            <div class="inline-block">MADE IN HER IMAGE</div>
-            <div class="inline-block">About</div>
-            <div class="inline-block">Explore</div>
-            <div class="inline-block">Program</div>
-            <div class="inline-block">Events</div>
-            <div class="inline-block">Sign Up</div>
-            <div class="inline-block">Log In</div>
+    <header>
+        <img class="logo" src="images/MadeInHerImage_transparentwgold.png">
+        <nav>
+            <ul class="menu">
+                <li>ABOUT</li>
+                <li>EXPLORE</li>
+                <li>PROGRAM</li>
+                <li>EVENTS</li>
+            </ul>
+        </nav>
+        <a href="#"><button id="signup">SIGN UP</button></a>
+        <a href="#"><button id="login">LOG IN</button></a>
+    </header>
+    <section>
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>FIND YOUR <br>TRIBE</h1>
+                <p>Made in Her Image is an online community of young women filmmakers empowering each other to share our work, find collaborators, and mentor each other.</p>
+                <button>SIGN UP</button>
+            </div>
         </div>
-    </nav>
+    </section>
 </body>
 </html>
