--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/MadeInHerImage_transparentwgold.png">
         <nav>
-            <ul class="menu">
-                <li>ABOUT</li>
-                <li>EXPLORE</li>
-                <li>PROGRAM</li>
-                <li>EVENTS</li>
-            </ul>
+            <div class="home">
+                <img src="images/MIHI_Logo_Secondary_White 2.png">
+                <h1>MADE IN HER IMAGE</h1>
+            </div>
+            <div class="menu">
+                <a href="#">ABOUT</a>
+                <a href="#">EXPLORE</a>
+                <a href="#">PROGRAM</a>
+                <a href="#">EVENTS</a>
+            </div>
+            <div class="onboarding">
+                <button class="button1">SIGN UP</button>
+                <button class="button2">LOG IN</button>
+            </div>
         </nav>
-        <a href="#"><button id="signup">SIGN UP</button></a>
-        <a href="#"><button id="login">LOG IN</button></a>
     </header>
     <section>
-        <div class="hero-image">
-            <div class="hero-text">
-                <h1>FIND YOUR <br>TRIBE</h1>
-                <p>Made in Her Image is an online community of young women filmmakers empowering each other to share our work, find collaborators, and mentor each other.</p>
-                <button>SIGN UP</button>
-            </div>
-        </div>
     </section>
 </body>
 </html>
