--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="home">
-                <img src="images/MIHI_Logo_Secondary_White 2.png">
+                <img class="logo" src="images/MIHI_Logo_Secondary_White 2.png">
                 <h1>MADE IN HER IMAGE</h1>
             </div>
             <div class="menu">
