Hero Banner Image
-adjusted size & position

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         </nav>
     </header>
     <section>
+            <div class="hero">
+                <div class="hero-text">
+                    <h2>FIND YOUR TRIBE</h2>
+                    <p>Made in Her Image is an online community of young women filmmakers empowering each other to share our work, find collaborators, and mentor each other.</p>
+                </div>
+            </div>
     </section>
 </body>
 </html>
