--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <div class="hero-text">
                     <h2>FIND YOUR TRIBE</h2>
                     <p>Made in Her Image is an online community of young women filmmakers empowering each other to share our work, find collaborators, and mentor each other.</p>
+                    <button class="button3">SIGN UP</button>
                 </div>
             </div>
     </section>
